fix: hearts on mobile

--- a/blocks/elements/__heart/elements__heart.css
+++ b/blocks/elements/__heart/elements__heart.css
@@ -13,4 +13,6 @@
 .elements__heart:hover {
   opacity: .5;
   cursor: pointer;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
